--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script defer type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script defer type="text/javascript" src="./js/activeLink.js"></script>
-    <script defer type="text/javascript" src="./js/onScrollChangeActive.js"></script>
+    <script defer type="module" src="./js/onScrollChangeActive.js"></script>
     
 </head>
 <body>
