--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script defer src="node_modules/jquery/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="my_styles.css">
     <script defer type="text/javascript" src="js/scrollToTop.js"></script>
