--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script defer type="text/javascript" src="js/scrollToTop.js"></script>
     <link rel="stylesheet" href="node_modules/bootstrap-icons/bootstrap-icons.svg">
 
-    <script defer type="module" src="./js/activeLink.js"></script>
+    <script defer type="text/javascript" src="./js/activeLink.js"></script>
     <script defer type="module" src="./js/onScrollChangeActive.js"></script>
     
 </head>
